--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.82",
     "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-faq-component": "^1.3.4",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5"
   },
